# advent2019

./: .gitignore  Makefile  README.md  advent2019.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: IntCode.hs  Lib.hs
src/Advent/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
test/: Main.hs
test/Advent/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
